<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    style="@android:style/Theme.Holo.Light">

  <GridLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:clipChildren="true"
      android:columnCount="4"
      android:id="@+id/">

      <TextView
          android:id="@+id/tvUserName"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_column="0"
          android:layout_columnSpan="3"
          android:layout_gravity="fill_horizontal|top"
          android:layout_row="0"
          android:text="UserName" />

      <ImageView
          android:id="@+id/ivUserLogo"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_column="3"
          android:layout_gravity="fill_horizontal|fill_vertical"
          android:layout_row="0"
          android:layout_rowSpan="3"
          android:scaleType="fitCenter"
          android:src="@drawable/ic_launcher" />

      <TextView
          android:layout_column="0"
          android:layout_gravity="left|top"
          android:layout_row="1"
          android:text="@string/total_randos_text" />

      <TextView
          android:id="@+id/tvTotalRandos"
          android:layout_column="1"
          android:layout_gravity="left|top"
          android:layout_row="1"
          android:text="0" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_column="0"
          android:layout_gravity="left|top"
          android:layout_row="2"
          android:text="@string/total_likes_text" />

      <TextView
          android:id="@+id/tvTotalLikes"
          android:layout_column="1"
          android:layout_gravity="left|top"
          android:layout_row="2"
          android:text="0" />

      <View
          android:layout_width="match_parent"
          android:layout_height="2dp"
          android:layout_column="0"
          android:layout_columnSpan="4"
          android:layout_gravity="fill_horizontal|top"
          android:layout_row="3"
          android:background="@android:color/darker_gray" />

      <TextView
          android:layout_column="0"
          android:layout_columnSpan="4"
          android:layout_gravity="left|top"
          android:layout_row="4"
          android:text="@string/last_rando_text" />

      <ImageView
          android:id="@+id/ivLastRando"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_column="0"
          android:layout_columnSpan="4"
          android:layout_gravity="top"
          android:layout_margin="10dp"
          android:layout_row="5"
          android:src="@drawable/ic_launcher" />


      <Space
          android:layout_column="2"
          android:layout_gravity="left|top"
          android:layout_row="7" />


      <LinearLayout
          android:layout_column="0"
          android:layout_columnSpan="4"
          android:layout_gravity="fill_horizontal|top"
          android:layout_row="7"
          android:orientation="horizontal"
          >

          <TextView
          android:layout_column="0"
          android:layout_gravity="right|top"
          android:layout_row="6"
          android:layout_marginLeft="15dp"
          android:text="@string/rando_likes_text"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content" />

          <TextView
              android:id="@+id/tvRandoLikes"
              android:layout_column="1"
              android:layout_row="6"
              android:layout_marginLeft="5dp"
              android:layout_marginRight="5dp"
              android:text="0"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content" />

          <Space
              android:layout_width="wrap_content"
              android:layout_height="match_parent"
              android:layout_weight="10"
              />

          <TextView
              android:layout_row="6"
              android:text="@string/rando_comments_text"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginRight="10dp"
              />

          <TextView
              android:id="@+id/tvRandoComments"
              android:layout_width="wrap_content"
              android:layout_column="3"
              android:layout_row="6"
              android:text="0"
              android:layout_height="wrap_content"
              android:layout_marginRight="15dp"
              />

      </LinearLayout>

  </GridLayout>

</FrameLayout>